--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # Local Netlify folder
 .netlify
+
+# testing
+/coverage
+
+# production
+/dist
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
